[gd_scene load_steps=6 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="1_xhlmx"]
[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/objects/StonePlatform.tscn" id="2_lvria"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/objects/BlueShip.tscn" id="3_bjeoq"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4_quslc"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("1_xhlmx")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("2_lvria")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("2_lvria")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." instance=ExtResource("3_bjeoq")]
position = Vector2(98, 315)
rotation = -1.61443
scale = Vector2(2.785, 2.785)
lock_rotation = true

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4_quslc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(69, 40)
shape = SubResource("1")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
